--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "uikit": "^3.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
